# projeto-engenharia-dados-satc

./: 404.html  GEMINI.md  README.md  compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
data/delta_lake/delta_table/: .part-00000-78cfae19-c4e3-402f-879b-8bcb08656510-c000.snappy.parquet.crc  .part-00000-c0cbd533-247e-454d-b109-df3bd3c69d60-c000.snappy.parquet.crc  .part-00000-ee31740f-ca37-4707-8e32-7cb1c9562f90-c000.snappy.parquet.crc  .part-00001-387eb4ad-6408-4d3a-bd56-4e0ab78c053c-c000.snappy.parquet.crc  .part-00002-e12c5735-8332-47dd-a256-7120eb749876-c000.snappy.parquet.crc  part-00000-78cfae19-c4e3-402f-879b-8bcb08656510-c000.snappy.parquet  part-00000-c0cbd533-247e-454d-b109-df3bd3c69d60-c000.snappy.parquet  part-00000-ee31740f-ca37-4707-8e32-7cb1c9562f90-c000.snappy.parquet  part-00001-387eb4ad-6408-4d3a-bd56-4e0ab78c053c-c000.snappy.parquet  part-00002-e12c5735-8332-47dd-a256-7120eb749876-c000.snappy.parquet
data/delta_lake/delta_table/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc  .00000000000000000003.json.crc
data/iceberg_warehouse/db_teste/tabela_v1/metadata/: .v1.metadata.json.crc  (+37 more)
delta/: index.html
docker/: Dockerfile
docs/: delta.md  iceberg.md  index.md  spark.md
examples/: 1_estudo_delta_lake.ipynb  2_estudo_apache_iceberg.ipynb
examples/Apache Iceberg/: Apache_Icerberg.ipynb
examples/apache_iceberg/: 2_estudo_apache_iceberg.ipynb
examples/delta_lake/: 1_estudo_delta_lake.ipynb
iceberg/: index.html
search/: search_index.json
spark/: index.html
(+134 files in other folders)
