[tool.poetry]
name = "projeto-ed-satc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.0"
delta-spark = "3.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"
jupyterlab = "^4.5.6"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.23"
pymdown-extensions = "^10.8.1"
mkdocstrings = "0.24.0"
mkdocs-autorefs = "0.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
